syntax = "proto3";

package resourceservice;

option java_multiple_files = true;
option java_package = "com.example.resource_service.grpc";
option java_outer_classname = "ResourceServiceProto";

service ResourceService {
  rpc getResource (ResourceRequest) returns (ResourceResponse) {}
  rpc checkAvailability(ResourceRequest) returns (ResourceResponse);
}

message ResourceRequest {
  int64 resourceId = 1;
  string tenantId = 2;
}

message ResourceResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool exists = 4;
  bool available = 5;
  bool active = 6;
}